image credit alignment fixes

--- a/themes/exchanges/scss/Imports/_article.scss
+++ b/themes/exchanges/scss/Imports/_article.scss
@@ -8,10 +8,10 @@
     font-family: $header-font-family;
     font-size: rem-calc(16);
     font-style: italic;
+    text-align: right;
 
     @media #{$large-up} {
-        text-align: right;
-        padding-right: 75px;
+        padding-right: 50px;
     }
 }
 
